# glplayground

./: .clang-format  BUILD.gn  CMakeLists.txt  Geodesic.c  README.md  etc1_cpu.c  etc1_cs.c  etc1_frag.c  etc1frag.glsl  etc1frag_cs.glsl  gaussian-blur.cpp  gaussian-column.glsl  gaussian-row.glsl  glu_star.cpp  input.pkm  s3tc_cpu.cpp  s3tc_cs.c  s3tc_encode.glsl  simple-triangle.c  threshold.glsl
freeglut-3.0.0/: BUILD.gn
freeglut-3.0.0/src/x11/: fg_gamemode_x11.c  fg_input_devices_x11.c  fg_joystick_x11.c
glew-1.13.0/: BUILD.gn  CMakeLists.txt
glew-1.13.0/include/GL/: glew.h
glew-1.13.0/src/: glew.c
graduate-article/: BUILD.gn  CMakeLists.txt  MultiSampleSceneObject.cpp  MultiSampleSceneObject.hpp  drawdragon_f.glsl  drawdragon_v.glsl  drawquads_f.glsl  drawquads_v.glsl  main.cpp  sort_my.glsl  sort_nvidia.glsl
graduate-article/Scene/: DrawDesc.hpp  DrawableModel.hpp  GLError.hpp  InitDesc.hpp  MyMath.h  PassDesc.hpp  Scene.hpp  SceneObject.hpp  Vector.hpp  log.hpp
graduate-article/Scene/SceneImpl/: SceneImpl.hpp  SceneImplDestructor.cpp  compile.sh  loadFBOs.cpp  loadModels.cpp  loadShaders.cpp  loadTextures.cpp  sdkmesh.cpp  sdkmesh.h
graduate-article/Scene/src/: Scene.cpp  SceneInitException.cpp  Vector.cpp
graduate-article/Scene/src/linux/: MapFileLinuxImpl.cpp
graduate-article/Scene/src/windows/: MapWindowsImpl.cpp
graduate-article/nvImage/src/: nvImage.cpp
graduate-article/nvModel/include/: nvQuaternion.h
graduate-article/nvModel/src/: nvModel.cpp  nvModelObj.cpp
lib/glsw/: BUILD.gn
libpng-1.2.51/: BUILD.gn  config.h
nvlib/: BUILD.gn  CMakeLists.txt
nvlib/nvImage/include/: nvImage.h
nvlib/nvImage/src/: nvImage.cpp  nvImagePng.cpp  rgbe.c
nvlib/nvModel/include/: nvModel.h  nvVector.h
nvlib/nvModel/src/: nvModel.cpp  nvModelObj.cpp  nvModelQuery.cpp
squish/: BUILD.gn  alpha.cpp  alpha.h  clusterfit.cpp  clusterfit.h  colourblock.cpp  colourblock.h  colourfit.cpp  colourfit.h  colourset.cpp  colourset.h  maths.cpp  maths.h  rangefit.cpp  rangefit.h  simd.h  simd_float.h  simd_sse.h  simd_ve.h  singlecolourfit.cpp  singlecolourfit.h  squish-base.gypi  squish.cpp  squish.gyp  squish.gypi  squish.h
zlib-1.2.8/: BUILD.gn  CMakeLists.txt
